# markdown-editor

./: .gitignore  BUILD_WINDOWS.md  README.md  index.html  package-lock.json  package.json  plan.md
.github/workflows/: build.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  desktop-template.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Editor.jsx  Toolbar.jsx
